--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="container">
             <div class="small-bold-text companies-header">The worlds best companies rely on usabilityHub to make better design decisions</div>
             <div class="logos flex">
-                <img class="logo" src="./assets/logo1.png">
+                <img class="logo" src="logo1.png">
                 <img class="logo" src="./assets/logo2.png">
                 <img class="logo" src="./assets/logo3.png">
                 <img class="logo" src="./assets/logo4.png">
